change logo image

--- a/eid2020.html
+++ b/eid2020.html
@@ -7,7 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <link rel="icon" href="images/logo.jpeg">
+    <link rel="icon" href="images/logo0.png">
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-light bg-light ">
       <a class="navbar-brand" href="#">
         <img
-          src="images/logo.jpeg"
+          src="images/logo0.png"
           width="30"
           height="30"
           class="d-inline-block align-top"
